[package]
name = "download-daum-cafe"
version = "0.1.0"
authors = ["Evan Chang <evanc577@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.fs_extra]
version = "1.2"

[dependencies.indicatif]
version = "0.16"

[dependencies.lazy_static]
version = "1.4"
default-features = false

[dependencies.regex]
version = "1"
default-features = false
features = ["std"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["native-tls", "json"]

[dependencies.sanitize-filename]
version = "0.3"

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false

[dependencies.tempfile]
version = "3.2"

[dependencies.tokio]
version = "1.11"
# default-features = false
features = ["macros", "io-util", "io-std", "sync", "time", "rt-multi-thread"]

[dependencies.toml]
version = "0.5"
default-features = false

[dependencies.unicode-segmentation]
version = "1.8"
